crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_openai_provider_120x48.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
expression: "render_usage_dialog_snapshot_for_view(120, 48, UsageDialogTab::Provider,\nopenai_usage_view_fixture())"
---



                 ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
                 │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
                 │                   ━━━━━━━━                                                         │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  OpenAI                                                         account@work.test  │
                 │  Updated 1m ago                                                                    │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  Plan Pro 20x                                                                      │
                 │                                                                                    │
                 │  Session                                                                           │
                 │  █████████████████████████████████████████████████████████████████████████████░░░  │
                 │  97% left                                                            Resets 19:45  │
                 │  33% in reserve                                                 Lasts until reset  │
                 │                                                                                    │
                 │  Weekly                                                                            │
                 │  ███████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
                 │  19% left                                                  Resets tomorrow, 04:18  │
                 │  12% in reserve                                                 Lasts until reset  │
                 │                                                                                    │
                 │  Codex Spark 5-hour                                                                │
                 │  ████████████████████████████████████████████████████████████████████████████████  │
                 │  100% left                                                           Resets 21:31  │
                 │                                                                                    │
                 │  Codex Spark Weekly                                                                │
                 │  ████████████████████████████████████████████████████████████████████████████████  │
                 │  100% left                                                  Resets Jul 1 at 16:31  │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  Limit Reset Credits                                    2 manual resets available  │
                 │  Next expires Jul 12 at 08:14                                                      │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  Credits                                                                           │
                 │  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
                 │  0 left                                                                 1K tokens  │
                 │                                                                                    │
                 └────────────────────────────────────────────────────────────────────────────────────┘
