crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_wide_120x40.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
expression: "render_usage_dialog_snapshot(120, 40, UsageDialogTab::Provider)"
---



                 ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
                 │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
                 │                   ━━━━━━━━                                                         │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  OpenAI                                                        alexey@example.com  │
                 │  Updated now                                                                       │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  Plan Pro 20x                                                                      │
                 │                                                                                    │
                 │  Session                                                                           │
                 │  ███████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
                 │  37% left                                                            Resets 15:07  │
                 │  10% in reserve                                                 Lasts until reset  │
                 │────────────────────────────────────────────────────────────────────────────────────│
                 │  Credits                                                                           │
                 │  ACP billing unavailable                                                           │
                 │                                                                                    │
                 └────────────────────────────────────────────────────────────────────────────────────┘
