crates/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_xai_provider_100x28.snap
---
source: crates/jackin-capsule/src/tui/components/dialog/tests.rs
expression: "render_usage_dialog_snapshot_for_view(100, 28, UsageDialogTab::Provider,\nxai_usage_view_fixture())"
---



       ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
       │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
       │                                              ━━━━━                                 │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  xAI                                                            account@work.test  │
       │  Updated 4m ago                                                                    │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Plan SuperGrok                                                                    │
       │                                                                                    │
       │  Weekly                                                                            │
       │  ████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  │
       │  18% left                                                   Resets Jul 1 at 07:00  │
       │                                                                                    │
       └────────────────────────────────────────────────────────────────────────────────────┘
